tests/machine/x/c/left_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/left_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/left_join.c:90:53: error: incompatible types when initializing type ‘int’ using type ‘customersItem’
   90 |           (resultItem){.orderId = o.id, .customer = c, .total = o.total};
      |                                                     ^
/workspace/mochi/tests/machine/x/c/left_join.c:94:25: error: invalid initializer
   94 |       customersItem c = 0;
      |                         ^
/workspace/mochi/tests/machine/x/c/left_join.c:96:53: error: incompatible types when initializing type ‘int’ using type ‘customersItem’
   96 |           (resultItem){.orderId = o.id, .customer = c, .total = o.total};
      |                                                     ^
/workspace/mochi/tests/machine/x/c/left_join.c:101:28: error: invalid initializer
  101 |   list_resultItem result = _t3;
      |                            ^~~

   1: #include <stdio.h>
